# vnape

./: CHANGELOG_FIXES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: concepts.md  conf.py  index.rst  installation.md  quickstart.md
docs/_static/css/: custom.css
docs/api/: core.md
docs/architecture/: overview.md
docs/protocols/: overview.md
docs/tutorials/: basic_verification.md  cicd_integration.md  custom_protocols.md  index.md  monitoring_dashboard.md  policy_refinement.md  quantum_assessment.md  understanding_results.md
examples/: basic_usage.py  quantum_assessment.py
src/vnape/: __init__.py
src/vnape/core/: __init__.py  framework.py  types.py
src/vnape/npa/: __init__.py  adapter.py  encoder.py  generator.py  pattern_detector.py
src/vnape/pqae/: __init__.py  enforcer.py  monitor.py  quantum_context.py
src/vnape/protocols/: __init__.py  akma_plus.py  base.py  imessage_pq3.py
src/vnape/svb/: __init__.py  abstraction.py  bridge.py  certificate.py  translator.py
src/vnape/utils/: __init__.py  helpers.py  logging.py  metrics.py  visualization.py
tests/: conftest.py  test_smoke.py
tests/integration/: __init__.py  test_vnape_integration.py
tests/unit/: __init__.py  test_core_types.py  test_npa.py  test_pqae.py  test_protocols.py  test_svb.py  test_utils.py
